<resources>
    <string name="app_name">TestLab</string>
    <string name="weather_activity_title">Weather Forecast</string>
    <string name="countries_activity_title">Countries</string>
    <string name="contacts_activity_title">Contacts</string>
    <string name="button1">Click Me</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_weather">Weather</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="button_countries">Countries</string>
    <string name="button_contacts">Contacts</string>
    <string name="button_scan">QR Scan</string>
    <string name="button_verse_sheet">Verse Sheet</string>
    <string name="button_qrcode">Generate QR</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ipsum tellus, congue vitae mattis eget, tristique et turpis. Aliquam id tellus vel libero placerat venenatis. Integer vestibulum feugiat sapien eu lacinia. Curabitur nec libero lobortis ligula blandit consectetur. Nunc eu placerat urna. Morbi non luctus nisl. Donec pulvinar orci ut metus lobortis, quis congue mauris tristique. Suspendisse at viverra diam. Nullam in arcu ligula. Nulla enim urna, faucibus vitae nisi finibus, maximus facilisis lorem.

Ut ipsum ligula, interdum ac turpis ac, dictum blandit augue. Duis faucibus arcu id nibh iaculis, eu venenatis neque tempor. Integer vitae mattis mi. Aliquam massa mauris, tristique ut nisi nec, convallis tincidunt urna. Curabitur molestie nisi mattis nisl iaculis, at consequat ligula lobortis. Nam nec facilisis dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque a libero augue. Aenean vitae commodo libero, at vestibulum erat.

Integer dui nisi, pretium vitae metus et, viverra luctus purus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Cras congue eleifend maximus. Nulla mollis, lacus eu hendrerit imperdiet, felis nunc tempor ligula, in placerat eros elit et lacus. Nunc nec elit eget felis commodo interdum. Fusce et condimentum justo. Curabitur tempor tempus lectus ac venenatis. Phasellus nulla lectus, sagittis a tellus quis, consectetur aliquam erat. Nulla eu massa sem. Sed vitae massa neque. Etiam accumsan feugiat nibh ullamcorper congue.

Nullam non cursus felis. Nulla facilisi. Ut volutpat sagittis molestie. Curabitur viverra iaculis urna sed commodo. Nam iaculis iaculis libero, sed tristique mauris facilisis eget. Integer justo urna, sollicitudin eget ligula eget, convallis gravida arcu. Vivamus commodo lectus aliquam mi pharetra, sagittis dictum velit efficitur. Aenean ornare diam auctor odio rhoncus mattis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque sed condimentum ipsum.

Vivamus eu auctor arcu, ac porttitor leo. Quisque in malesuada augue, in aliquet libero. Vivamus porttitor orci nec ipsum euismod, et varius ex ultricies. Donec aliquam lorem quis elit facilisis finibus. Curabitur id leo sed quam accumsan dignissim. Nullam sed auctor nisl. Nulla at odio erat. Phasellus vel dignissim libero. Nam sagittis, lorem id tincidunt tempus, metus massa fringilla dolor, sed fermentum ligula purus ac massa. Suspendisse sit amet consequat purus. Aliquam in neque dictum, consequat magna aliquam, cursus tellus. Fusce magna nunc, tincidunt vitae lectus at, auctor fermentum leo. Ut ut nulla mi. Nulla non est venenatis, vestibulum dolor nec, ultricies urna.</string>
</resources>
