<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/promotion_grid"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                        android:paddingHorizontal="@dimen/grid_1_5"
                        android:paddingBottom="@dimen/grid_1"
                        android:clipToPadding="false"
                        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                        app:spanCount="2"
                        app:hasFixedSize="@{true}"
                        android:scrollbarStyle="outsideOverlay"
                        android:scrollbars="vertical"
                        tools:listitem="@layout/menu_item"/>

                <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/grid_1_5"
                        android:orientation="horizontal">

                    <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                        <EditText
                                android:id="@+id/editText"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:hint="@string/edit_message"
                                android:inputType="textPersonName" />

                        <Button
                                android:id="@+id/button2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxWidth="48dp"
                                android:onClick="sendMessage"
                                android:text="@string/button_send" />
                    </TableRow>

                </TableLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_margin="@dimen/grid_1_5"
                        android:baselineAligned="false"
                        android:orientation="horizontal">

                    <Button
                            android:id="@+id/button3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/button_countries"
                            android:onClick="startCountriesActivity" />

                    <Button
                            android:id="@+id/button4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:text="@string/button_contacts" />
                </LinearLayout>

                <TextView
                        android:id="@+id/text1"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_margin="@dimen/grid_1_5"
                        android:scrollbars="vertical"
                        android:text="@string/lorem_ipsum"
                        android:textSize="18sp" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/grid_1_5"
                        android:orientation="horizontal">

                    <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                    <Button
                            android:id="@+id/button"
                            android:layout_width="wrap_content"
                            android:layout_height="48dp"
                            android:text="@string/button1" />

                    <Space
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>